--- a/src/components/css/skeleton.css
+++ b/src/components/css/skeleton.css
@@ -31,7 +31,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 1600px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
@@ -50,9 +50,11 @@
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
+  .container {
+    width: 80%; }
   .column,
   .columns {
-    margin-left: 8%; }
+    margin-left: 4%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
